--- a/src/XGBPanelQuarterly.ipynb
+++ b/src/XGBPanelQuarterly.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "ywyZ7413Ty_0"
       },
@@ -65,7 +65,7 @@
         "#   - Panel predictors: Brent, VIX, StoxEurope, SP500, OSEBX, OBX_Energy + EUR_NOK lags\n",
         "#   - Macros: Q, d_pi, dI_t as past-only covariates\n",
         "#   - Data: daily (calendar days), forward-filled\n",
-        "#   - Cut: last business day of previous quarter (based on EUR_NOK B-days)\n",
+        "#   - Cut: last business day of previous quarter (based on EUR/NOK B-days)\n",
         "#   - Forecast: recursive daily next-quarter -> aggregate to quarterly mean over business days\n",
         "#   - No future covariate paths -> all non-target predictors frozen at last observed level\n",
         "#   - Metrics: Observations, RMSE, MAE, Directional accuracy\n",
@@ -98,33 +98,42 @@
         "# -----------------------------\n",
         "@dataclass\n",
         "class Config:\n",
+        "    # Data source\n",
         "    url: str = (\n",
         "        \"https://raw.githubusercontent.com/bredeespelid/\"\n",
         "        \"Data_MasterOppgave/refs/heads/main/Variables/All_Variables/variables_daily.csv\"\n",
         "    )\n",
         "\n",
-        "    q_freq: str = \"Q-DEC\"     # quarterly evaluation\n",
-        "    max_lags: int = 20        # daily lags per predictor\n",
-        "    max_horizon: int = 128    # must exceed longest quarter (~92 days)\n",
+        "    # Evaluation granularity\n",
+        "    q_freq: str = \"Q-DEC\"\n",
+        "    max_lags: int = 20\n",
+        "    max_horizon: int = 128  # must exceed longest quarter (~92 days)\n",
         "\n",
-        "    # XGB hyperparameters (cap <= 150 trees)\n",
+        "    # Tuned XGB hyperparameters (random search on pre-evaluation panel)\n",
         "    n_estimators: int = 150\n",
-        "    learning_rate: float = 0.08\n",
-        "    max_depth: int = 3\n",
-        "    subsample: float = 0.8\n",
-        "    colsample_bytree: float = 0.8\n",
-        "    min_child_weight: float = 3.0\n",
+        "    learning_rate: float = 0.04\n",
+        "    max_depth: int = 6\n",
+        "    min_child_weight: float = 7.0\n",
+        "    subsample: float = 0.6\n",
+        "    colsample_bytree: float = 1.0\n",
         "    gamma: float = 0.05\n",
-        "    reg_alpha: float = 0.0\n",
-        "    reg_lambda: float = 2.0\n",
+        "    reg_alpha: float = 0.2\n",
+        "    reg_lambda: float = 0.5\n",
+        "\n",
+        "    # Fixed model choices (not part of tuning)\n",
+        "    tree_method: str = \"hist\"\n",
+        "    objective: str = \"reg:squarederror\"\n",
+        "    eval_metric: str = \"rmse\"\n",
         "    random_state: int = 42\n",
         "\n",
+        "    # Misc\n",
         "    retries: int = 3\n",
         "    timeout: int = 60\n",
         "    verbose: bool = True\n",
         "\n",
         "    # PNG only\n",
         "    fig_png: str = \"XGB_PriceOnly_Quarterly_PanelPastCov.png\"\n",
+        "\n",
         "\n",
         "CFG = Config()\n",
         "\n",
@@ -147,7 +156,7 @@
         "# Download helper\n",
         "# -----------------------------\n",
         "def download_csv_text(url: str, retries: int, timeout: int) -> str:\n",
-        "    \"\"\"Download CSV with simple retry/backoff.\"\"\"\n",
+        "    \"\"\"Download CSV with retry/backoff.\"\"\"\n",
         "    last_err = None\n",
         "    for k in range(1, retries + 1):\n",
         "        try:\n",
@@ -164,7 +173,7 @@
         "\n",
         "\n",
         "# -----------------------------\n",
-        "# Data loading: daily wide DF + EUR_NOK business-day series\n",
+        "# Data loading: daily wide DF + EUR/NOK business-day series\n",
         "# -----------------------------\n",
         "def load_series(url: str) -> Tuple[pd.Series, pd.DataFrame]:\n",
         "    \"\"\"\n",
@@ -173,7 +182,7 @@
         "\n",
         "    Returns:\n",
         "      S_b  : EUR_NOK on business days (B) with ffill (cuts + truth)\n",
-        "      DF_d : daily (D) wide DataFrame with PANEL_SERIES + MACRO_COLS,\n",
+        "      DF_d : daily (D) wide DataFrame with ALL_PREDICTORS,\n",
         "             calendar days, forward-filled\n",
         "    \"\"\"\n",
         "    text = download_csv_text(url, CFG.retries, CFG.timeout)\n",
@@ -200,11 +209,11 @@
         "    if df.empty:\n",
         "        raise ValueError(\"Dataset is empty after cleaning.\")\n",
         "\n",
-        "    # Business-day EUR_NOK (truth/aggregation base)\n",
+        "    # EUR/NOK on business days only (truth + cut calendar)\n",
         "    S_b = df[TARGET_SERIES].asfreq(\"B\").ffill().astype(float)\n",
         "    S_b.name = TARGET_SERIES\n",
         "\n",
-        "    # Daily wide DF_d (calendar days, forward-filled)\n",
+        "    # Daily wide DF (calendar days), ffilled\n",
         "    full_idx = pd.date_range(df.index.min(), df.index.max(), freq=\"D\")\n",
         "    DF_d = df.reindex(full_idx).ffill()\n",
         "    DF_d.index.name = \"DATE\"\n",
@@ -213,7 +222,7 @@
         "\n",
         "\n",
         "def last_trading_day(S_b: pd.Series, start: pd.Timestamp, end: pd.Timestamp) -> Optional[pd.Timestamp]:\n",
-        "    \"\"\"Return the last business day in [start, end].\"\"\"\n",
+        "    \"\"\"Return last business day within [start, end].\"\"\"\n",
         "    sl = S_b.loc[start:end]\n",
         "    return sl.index[-1] if not sl.empty else None\n",
         "\n",
@@ -259,22 +268,21 @@
         "        raise ValueError(\"Too few observations after lagging to fit model.\")\n",
         "\n",
         "    model = XGBRegressor(\n",
-        "        n_estimators=CFG.n_estimators,  # <=150 always\n",
+        "        n_estimators=CFG.n_estimators,\n",
         "        learning_rate=CFG.learning_rate,\n",
         "        max_depth=CFG.max_depth,\n",
+        "        min_child_weight=CFG.min_child_weight,\n",
         "        subsample=CFG.subsample,\n",
         "        colsample_bytree=CFG.colsample_bytree,\n",
-        "        min_child_weight=CFG.min_child_weight,\n",
         "        gamma=CFG.gamma,\n",
         "        reg_alpha=CFG.reg_alpha,\n",
         "        reg_lambda=CFG.reg_lambda,\n",
-        "        objective=\"reg:squarederror\",\n",
-        "        eval_metric=\"rmse\",\n",
-        "        tree_method=\"hist\",\n",
+        "        objective=CFG.objective,\n",
+        "        eval_metric=CFG.eval_metric,\n",
+        "        tree_method=CFG.tree_method,\n",
         "        random_state=CFG.random_state,\n",
         "        n_jobs=1\n",
         "    )\n",
-        "\n",
         "    model.fit(X, y)\n",
         "    return model, lag_cols\n",
         "\n",
@@ -331,10 +339,10 @@
         "      - cut at last business day of previous quarter\n",
         "      - fit XGB on daily history up to cut\n",
         "      - recursively forecast full next quarter daily\n",
-        "      - aggregate to business-day quarterly mean and compare to truth\n",
+        "      - aggregate forecasts to business-day quarterly mean\n",
         "    \"\"\"\n",
         "    first_q = pd.Period(S_b.index.min(), freq=CFG.q_freq)\n",
-        "    last_q  = pd.Period(S_b.index.max(),  freq=CFG.q_freq)\n",
+        "    last_q  = pd.Period(S_b.index.max(), freq=CFG.q_freq)\n",
         "    quarters = pd.period_range(first_q, last_q, freq=CFG.q_freq)\n",
         "\n",
         "    def _process_one_quarter(q: pd.Period):\n",
@@ -347,7 +355,6 @@
         "            return (str(q), None, \"no_cut_in_prev_quarter\")\n",
         "\n",
         "        hist_df = DF_d.loc[:cut]\n",
-        "        # må ha nok for lagging\n",
         "        if hist_df.shape[0] <= CFG.max_lags:\n",
         "            return (str(q), None, \"hist<=max_lags\")\n",
         "\n",
