--- a/src/XGBPanelMonthly.ipynb
+++ b/src/XGBPanelMonthly.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "aebyhGtFTNZ4"
       },
@@ -113,16 +113,16 @@
         "    # MATCH RW history rule\n",
         "    min_hist_days: int = 40  # minimum calendar-day history before cut\n",
         "\n",
-        "    # XGB hyperparameters with 150-tree cap\n",
+        "    # Tuned XGB hyperparameters (random search, pre-eval FX panel)\n",
         "    n_estimators: int = 150\n",
-        "    learning_rate: float = 0.08\n",
-        "    max_depth: int = 3\n",
-        "    subsample: float = 0.8\n",
-        "    colsample_bytree: float = 0.8\n",
-        "    min_child_weight: float = 3.0\n",
+        "    learning_rate: float = 0.04\n",
+        "    max_depth: int = 6\n",
+        "    min_child_weight: float = 7.0\n",
+        "    subsample: float = 0.6\n",
+        "    colsample_bytree: float = 1.0\n",
         "    gamma: float = 0.05\n",
-        "    reg_alpha: float = 0.0\n",
-        "    reg_lambda: float = 2.0\n",
+        "    reg_alpha: float = 0.2\n",
+        "    reg_lambda: float = 0.5\n",
         "    random_state: int = 42\n",
         "\n",
         "    retries: int = 3\n",
