--- a/src/XGBriceQuarterly.ipynb
+++ b/src/XGBriceQuarterly.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "lZT2d70VSjzl"
       },
@@ -103,16 +103,21 @@
         "    max_lags: int = 20\n",
         "    max_horizon: int = 128   # guard; must exceed longest quarter (~92 days)\n",
         "\n",
-        "    # XGB hyperparameters with 150-tree cap\n",
+        "    # Tuned XGB hyperparameters (theta*)\n",
         "    n_estimators: int = 150\n",
-        "    learning_rate: float = 0.08\n",
-        "    max_depth: int = 3\n",
-        "    subsample: float = 0.8\n",
-        "    colsample_bytree: float = 0.8\n",
-        "    min_child_weight: float = 3.0\n",
+        "    learning_rate: float = 0.04\n",
+        "    max_depth: int = 6\n",
+        "    min_child_weight: float = 7.0\n",
+        "    subsample: float = 0.6\n",
+        "    colsample_bytree: float = 1.0\n",
         "    gamma: float = 0.05\n",
-        "    reg_alpha: float = 0.0\n",
-        "    reg_lambda: float = 2.0\n",
+        "    reg_alpha: float = 0.2\n",
+        "    reg_lambda: float = 0.5\n",
+        "\n",
+        "    # Fixed model choices (not tuned)\n",
+        "    tree_method: str = \"hist\"\n",
+        "    objective: str = \"reg:squarederror\"\n",
+        "    eval_metric: str = \"rmse\"\n",
         "    random_state: int = 42\n",
         "\n",
         "    retries: int = 3\n",
@@ -226,18 +231,18 @@
         "        raise ValueError(\"Too few observations after lagging to fit model.\")\n",
         "\n",
         "    model = XGBRegressor(\n",
-        "        n_estimators=CFG.n_estimators,  # <=150 always\n",
+        "        n_estimators=CFG.n_estimators,\n",
         "        learning_rate=CFG.learning_rate,\n",
         "        max_depth=CFG.max_depth,\n",
+        "        min_child_weight=CFG.min_child_weight,\n",
         "        subsample=CFG.subsample,\n",
         "        colsample_bytree=CFG.colsample_bytree,\n",
-        "        min_child_weight=CFG.min_child_weight,\n",
         "        gamma=CFG.gamma,\n",
         "        reg_alpha=CFG.reg_alpha,\n",
         "        reg_lambda=CFG.reg_lambda,\n",
-        "        objective=\"reg:squarederror\",\n",
-        "        eval_metric=\"rmse\",\n",
-        "        tree_method=\"hist\",\n",
+        "        objective=CFG.objective,\n",
+        "        eval_metric=CFG.eval_metric,\n",
+        "        tree_method=CFG.tree_method,\n",
         "        random_state=CFG.random_state,\n",
         "        n_jobs=1\n",
         "    )\n",
@@ -323,7 +328,6 @@
         "\n",
         "    rows: Dict[str, dict] = {}\n",
         "    dropped: Dict[str, str] = {}\n",
-        "\n",
         "    for key, row, reason in results:\n",
         "        if row is not None:\n",
         "            rows[key] = row\n",
